--- a/public/admin.html
+++ b/public/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PestPost • Admin (Ultra‑Lite)</title>
+  <title>PestPost • Admin (Ultra‑Lite, Clean)</title>
   <style>
     body{margin:0;padding:16px;background:#0f1115;color:#eaeaea;font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
     h1{margin:0 0 10px;font-size:18px}
@@ -11,34 +11,33 @@
     input{background:#0e1016;color:#eaeaea;border:1px solid #222;border-radius:8px;padding:8px 10px;min-width:320px}
     button{background:#7c5cff;border:none;border-radius:8px;color:#fff;padding:8px 12px;cursor:pointer}
     button.secondary{background:#1e2230}
-    button.ghost{background:transparent;border:1px solid #333}
+    button.ghost{background:transparent;border:1px solid #333;color:#cfd8e3}
     #status{color:#9aa4b2}
     .box{border:1px solid #222;border-radius:10px;padding:12px;margin-top:12px;background:#151821}
     .log{white-space:pre-wrap;background:#0d1018;border:1px solid #222;border-radius:8px;padding:8px;max-height:220px;overflow:auto;margin-top:8px}
     .card{border:1px solid #222;border-radius:10px;padding:10px;margin:10px 0;background:#121520}
     .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
     .muted{color:#9aa4b2}
+    .hidden{display:none}
   </style>
 </head>
 <body>
-  <h1>PestPost • Admin (Ultra‑Lite)</h1>
+  <h1>PestPost • Admin</h1>
   <div class="row">
     <label for="token" class="muted">ADMIN_API_TOKEN</label>
     <input id="token" type="password" placeholder="Paste your admin token" />
     <button onclick="saveToken()">Save</button>
     <button class="secondary" onclick="clearToken()">Clear</button>
     <div id="status" class="muted"></div>
+    <div style="margin-left:auto" class="row">
+      <button class="ghost" id="toggleLogBtn" onclick="toggleLog()">Show log</button>
+      <button onclick="loadDrafts()">Refresh drafts</button>
+      <div class="muted">Host: <span id="host"></span></div>
+    </div>
   </div>
 
-  <div class="row">
-    <button class="ghost" onclick="testJS()">Test JS</button>
-    <button class="ghost" onclick="testHealth()">Test /api/health</button>
-    <button onclick="loadDrafts()">Refresh drafts</button>
-    <div class="muted">Host: <span id="host"></span></div>
-  </div>
-
-  <div class="box">
-    <strong>Console (on‑page)</strong>
+  <div class="box hidden" id="logBox">
+    <strong>Log</strong>
     <div id="log" class="log"></div>
   </div>
 
@@ -51,9 +50,10 @@
   // ===== Utilities =====
   const TOKEN_KEY = 'pp_admin_token';
   const logEl = document.getElementById('log');
+  const logBox = document.getElementById('logBox');
   const draftsEl = document.getElementById('drafts');
-  function log(msg){ const t = new Date().toLocaleTimeString(); logEl.textContent += `
-[${t}] ${msg}`; logEl.scrollTop = logEl.scrollHeight; }
+  function log(msg){ if(!logEl) return; const t = new Date().toLocaleTimeString(); logEl.textContent += `\n[${t}] ${msg}`; logEl.scrollTop = logEl.scrollHeight; }
+  function toggleLog(){ logBox.classList.toggle('hidden'); document.getElementById('toggleLogBtn').textContent = logBox.classList.contains('hidden')? 'Show log':'Hide log'; }
   function getToken(){ return localStorage.getItem(TOKEN_KEY) || ''; }
   function setToken(v){ localStorage.setItem(TOKEN_KEY, v); }
   function updateStatus(){ const t = getToken(); document.getElementById('status').textContent = t? `Saved (len=${t.length})` : 'No token saved'; }
@@ -65,8 +65,6 @@
   // Buttons
   function saveToken(){ const v = document.getElementById('token').value.trim(); if(!v){ log('Enter a token first'); return; } setToken(v); updateStatus(); log('Token saved.'); }
   function clearToken(){ localStorage.removeItem(TOKEN_KEY); updateStatus(); log('Token cleared.'); }
-  function testJS(){ log('JS is running ✅'); }
-  async function testHealth(){ try{ const r = await fetch('/api/health'); log('/api/health → '+r.status); const t = await r.text(); log(t.slice(0,200)); }catch(e){ log('health error: '+e.message); } }
 
   async function apiFetch(path, opts={}){
     const token = getToken(); if(!token) throw new Error('Missing ADMIN_API_TOKEN — paste and Save first.');
@@ -101,15 +99,15 @@
       ${it.caption_seed? `<div><span class='muted'>seed:</span> ${escapeHtml(it.caption_seed)}</div>`:''}
       ${mpath? `<div class='mono'><span class='muted'>media:</span> ${escapeHtml(mpath)}</div>`:''}
       <div class="row">
-        ${id? `<button onclick="approve(${id}, this)">${status==='approved'?'Approved':'Approve'}</button>`:''}
+        ${id? `<button ${status==='approved'?'disabled':''} onclick="approve(${id}, this)">${status==='approved'?'Approved':'Approve'}</button>`:''}
         ${id? `<button class="secondary" onclick="sendPreview(${id}, this)">Send preview</button>`:''}
         ${mpath? `<button class="ghost" onclick="openMedia('${encodeURIComponent(mpath)}')">Open media</button>`:''}
       </div>
     </div>`;
   }
 
-  window.approve = async function(id, btn){ try{ btn&& (btn.disabled=true); const r = await apiFetch('/api/admin-approve?id='+encodeURIComponent(id)); log('Approved #'+id); await loadDrafts(); }catch(e){ log('approve error: '+e.message); } finally{ btn&&(btn.disabled=false); } }
-  window.sendPreview = async function(id, btn){ try{ btn&& (btn.disabled=true); const r = await apiFetch('/api/admin-send-preview?id='+encodeURIComponent(id)); log('preview ok for #'+id); }catch(e){ log('preview error: '+e.message); } finally{ btn&&(btn.disabled=false); } }
+  window.approve = async function(id, btn){ try{ btn&& (btn.disabled=true); await apiFetch('/api/admin-approve?id='+encodeURIComponent(id)); log('Approved #'+id); await loadDrafts(); }catch(e){ log('approve error: '+e.message); } finally{ btn&&(btn.disabled=false); } }
+  window.sendPreview = async function(id, btn){ try{ btn&& (btn.disabled=true); await apiFetch('/api/admin-send-preview?id='+encodeURIComponent(id)); log('preview ok for #'+id); }catch(e){ log('preview error: '+e.message); } finally{ btn&&(btn.disabled=false); } }
   window.openMedia = async function(storagePathEnc){ const path=decodeURIComponent(storagePathEnc); try{ const data=await apiFetch('/api/admin-media-url?path='+encodeURIComponent(path)); const url=(typeof data==='string')? data : (data.url||data.signed_url||''); if(!url) throw new Error('No URL in response'); window.open(url,'_blank'); }catch(e){ log('openMedia error: '+e.message); } }
 
   function escapeHtml(s){ return (s+'').replace(/[&<>"']/g, c=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;"}[c])); }
@@ -118,7 +116,6 @@
   document.getElementById('host').textContent = location.host;
   const saved = getToken(); if(saved){ document.getElementById('token').value = saved; }
   updateStatus();
-  log('Ultra‑Lite booted.');
 </script>
 </body>
 </html>
