--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PestPost • Admin (Ultra‑Lite, Clean)</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <style>
     body{margin:0;padding:16px;background:#0f1115;color:#eaeaea;font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
     h1{margin:0 0 10px;font-size:18px}
